# JoyCTRL

./: README.md  keyboard.html  package-lock.json  package.json  test.ts  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  Keyboard.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ipcs/: app_ipcs.rs  config_ipcs.rs  constoller_ipcs.rs  mod.rs  system_ipc.rs  virtual_keyboard_ipcs.rs
src-tauri/src/model/: config.rs  gamepad.rs  mapping.rs  mod.rs
src-tauri/src/services/: config_service.rs  gamepad_service.rs  ipc_service.rs  mapping_service.rs  mod.rs  virtual_keyboard.rs
src/components/: condition-builder.component.tsx  dropdown-button.component.tsx  gamepad-mapping-tooltip.component.tsx  gamepad-selector.component.tsx  titlebar.component.tsx
src/components/action-builders/: action-wrapper.component.tsx  button-mouse-click-action-builder.component.tsx  button-mouse-move-action-builder.component.tsx  button-mouse-scroll-action-builder.component.tsx  button-open-file-action-builder.component.tsx  button-open-website-action-builder.component.tsx  button-pause-resume-action-builder.component.tsx  button-press-key-action-builder.component.tsx  button-write-text-action-builder.component.tsx  stick-mouse-move-action-builder.component.tsx  stick-mouse-scroll-action-builder.component.tsx  toogle-virtual-keyboard-action-builder.component.tsx  types.ts
src/components/gamepads/: dualsense-black.component.tsx  dualsense-white.component.tsx  dualshock-4-black.component.tsx  dualshock-4-white.component.tsx  reactive-gamepad.component.tsx  xbox-one-black.component.tsx  xbox-one-white.component.tsx  xbox-series-x-black.component.tsx  xbox-series-x-white.component.tsx
src/components/icons/: cheveron-forward-icon.component.tsx  chevron-backward-icon.component.tsx  chevron-down-icon.component.tsx  close-small-icon.component.tsx  (+9 more)
src/helpers/: error.helpers.ts  function.helpers.ts  promise.helpers.ts
src/hooks/: use-constant.hook.ts  use-observable.hook.ts  use-on-click-outside.hook.ts  use-on-key-up.hook.ts  use-service.hook.ts
src/services/: config.service.ts  gamepad-manager.service.ts  ipc.service.ts  mappings.service.ts  modal.service.ts
(+14 files in other folders)
