[package]
name = "JoyCTRL"
version = "0.1.0"
description = "A Tauri App"
authors = ["Zagrios"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "joyctrl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
ts-rs = "11.0.1"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", branch = "master", features = ["bundled", "hidapi"] }
enigo = "0.5.0"
tauri-plugin-store = "2.2.1"
tauri-plugin-dialog = "2.2.2"
