[package]
name = "JoyCTRL"
version = "0.1.0"
description = "A Tauri App"
authors = ["Zagrios"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "joyctrl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
ts-rs = "11.0.1"
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
sdl3 = { version = "0.14.40", features = ["hidapi", "build-from-source-static"] }
enigo = "0.5.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-dialog = "2.3.3"
windows = "0.61.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.3"
